--- a/2014/styles/partials/_section_organizers.scss
+++ b/2014/styles/partials/_section_organizers.scss
@@ -3,8 +3,12 @@
   $gap-top: 4em;
   margin: $gap-top 1.5em 0;
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   &:last-child {
-    margin-top: $gap-top + 8em;
+    margin: $gap-top + 8em 2.5em 0;
   }
 }
 .organizer-name {
